2009-02-11  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Barf if emacs-major-version <= 20. We support 21 and up.
	(slime-emacs-20-p): Removed.

	* slime.el (slime-forward-reader-comment): Removed.
	(slime-forward-any-comment): New; superset of above.
	(slime-forward-reader-conditional): Make it understand SBCL's
	#!+,#!- so it works in source files of SBCL itself, too.
	(slime-current-parser-state): New.

2009-02-07  Tobias C. Rittweiler  <tcr@freebits.de>

	In Xref, list IR1-conversion functions with :DEF-IR1-TRANSLATOR as
	prefix rather than DEFUN. (Test case: M-. on FUNCTION.)

	* swank-sbcl.lisp (definition-specifier): New function.
	(make-dspec): New function. Splitted from
	MAKE-SOURCE-LOCATION-SPECIFICATION.

2009-02-07  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-initialize-macroexpansion-buffer): Clear the
	buffer-undo-list, so the user can't get expansions from earlier
	macroexpansions into the buffer, screwing up badly.

2009-01-30  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-clisp.lisp (fspec-location): Fix creation of source-location.

	Patch by Carsten Blaauw.

2009-01-30  Geo Carncross  <geocar@gmail.com>

	* swank-ecl.lisp (grovel-docstring-for-arglist): Fix for arglist
	that reads, but isn't a list

2009-01-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-backend.lisp (with-symbol): New function, to be used with #+.

	* swank-sbcl.lisp: Use WITH-SYMBOL and get rid of SBCL-WITH-SYMBOL.

	* swank-openmcl.lisp (macroexpand-all): Implement it.

	Patch by Stas Boukarev.

2009-01-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-editing-keys): New variable; splitted from
	`slime-keys'. Contains key bindings that are useful for buffers
	where users can edit s-exprs, such as source buffers and the REPL.
	(slime-keys): Use it.

2009-01-17  Tobias C. Rittweiler  <tcr@freebits.de>

	Fix C-u C-c C-c in SLDB.

	* slime.el (sldb-recompile-frame-source): sind
	`slime-compilation-policy' at the right place.
